--- a/index.html
+++ b/index.html
@@ -28,80 +28,62 @@
     <!--présentation-->
     <div class="block" id="presentation">
       <h2>Bonjour,</h2>
-      <h3>Je m’appelle Murielle, mariée et heureuse maman de deux jeunes filles. J’ai 48 ans et plus de 20 ans d’expérience professionnelle dans le secteur commercial après une formation de niveau bac+3 en Marketing et Communication, suivie à Isam Sup de Co Amiens.</h3>
-      <h3>J'aime relever des nouveaux défis et je m'adapte aisément au changement. La routine ce n'est pas pour moi !</h3>
-      <h3>D'un tempérament curieux et plutôt optimiste, je regarde toujours vers l'avenir. Aussi savourer le présent avec ma famille est important pour mon équilibre.</h3>
-      <h3>Mon regard vise souvent l'objectif pour capter l'image, la beauté, l'originalité, les couleurs au travers de voyages et de découvertes.</h3>
-      <h3>La danse est aussi ma passion.</h3>
-      <h3>La convivialité est mon credo : les relations humaines font partie de ma vie.</h3>
+      <p>Je m’appelle Murielle, mariée et heureuse maman de deux jeunes filles. J’ai 48 ans et plus de 20 ans d’expérience professionnelle dans le secteur commercial après une formation de niveau bac+3 en Marketing et Communication, suivie à Isam Sup de Co Amiens.</p>
+      <p>J'aime relever des nouveaux défis et je m'adapte aisément au changement. La routine, ce n'est pas pour moi !</p>
+      <p>D'un tempérament curieux et plutôt optimiste, je regarde toujours vers l'avenir. Aussi, savourer le présent avec ma famille est important pour mon équilibre.</p>
+      <p>Mon regard utilise souvent l'objectif pour capter l'image, la beauté, l'originalité, les couleurs au travers de voyages et de découvertes.</p>
+      <p>La danse est aussi ma passion.</p>
+      <p>La convivialité est mon credo : les relations humaines font partie de ma vie.</p>
     </div>
     <!--mes formations-->
     <div class="block" id="formations">
       <h2>Mes formations</h2>
-      <h3>1993 1994 / ISAM SUP DE CO AMIENS</h3>
-      <h4>Licence en Marketing et Communication<h4>
-        <h3>1991 1993 / SAINT REMY SOISSONS</h3>
-        <h4>BTS Action Commerciale<h4>
-          <h3>1990 1991 / SAINT REMY SOISSONS</h3>
-          <h4>BTS Secrétariat de Direction<h4>
-            <h3>1989 1990 / LYCEE PAUL CLAUDER LAON</h3>
-            <h4>Bac littéraire<h4>
-            </div>
-            <div class="block" id="profExperiences">
-              <!--mes expériences professionnelles-->
-              <h2>Mes expériences professionnelles</h2>
-              <h3>2017 à ce jour / Chargée de développement chez EXPERT RH Amiens</h3>
-              <h4>Prospecter une zone géographique et recenser les besoins en formation et solutions RH des prospects/clients</h4>
-              <h4> Faire évoluer mon portefeuille d'affaires et entretenir un réseau d'affaires, faire le reporting et le suivi des entretiens</h4>
-              <h4>Poster des annonces LinKedin pour promouvoir l'image de l'entreprise et ses services</h4>
-              <h3>2009 à 2017 / Conseillère en assurances de biens, de personnes, en banque et crédit chez AXA CABINET HERBET MOREAU Amiens</h3>
-              <h4>Commerciale sédentaire</h4>
-              <h4>Découverte du client et de ses besoins</h4>
-              <h4>Conseiller, négocier et conclure la vente</h4>
-              <h4>Rédiger les contrats d'assurances</h4>
-              <h4>Réaliser le suivi du portefeuille clients</h4>
-              <h4>Assurer les actions marketing (mailing, phoning)</h4>
-              <h3>2002 à 2009 /Assistante d'agence en recrutement chez MANPOWER</h3>
-              <h4>Recrutements, tests de préselction, participation aux forums de recherche d'emplois, rencontres avec les partenaires d'emplois</h4>
-              <h4>Gestion des paies, contrat, factures, litiges, accidents du travail...</h4>
-              <h4>Actions marketing et commerciales, conseillère et assistante juridique pour les clients</h4>
-              <h3>1994 à 2002 /Assistante commerciale chez ESTODDI et divers CDD</h3>
-              <h4>assistante de direction chez PROLITERIE Saint Maximin 60</h4>
-              <h4>Assistante de direction à STE DE NEGOCE DE GRAINS à Quessy 02</h4>
-              <h4>MEDEF PICARDIE - FRANCE TELECOM Amiens - AUCHAN LOGISTIQUES Amiens - TECHNIMAGES Anizy-le-Château 02...</h4>
-            </div>
-            <!--mon nouveau projet professionnel-->
-            <div class="block" id="newProject">
-              <h2>Mon nouveau projet professionnel</h2>
-              <h2># LaComEstUnMetier</h2>
-              <h3>La com’, c’est juste pas grand chose...C’est juste du travail.</h3>
-              <h3>... C’est ce que j’ai souhaité découvrir en me formant au métier de Web Designer à La Manu, Campus d’Amiens.</h3>
-              <h3>La relation client a toujours été au coeur de mon métier.</h3>
-              <h3>Aujourd’hui, mes comptences sont reconnues auprès de mes clients. Il est temps pour moi de revenir à mes premières amours : la communication et en particulier la communication digitale, me permettant d’accéder à un métier en plein essor.</h3>
-              <h3>Mettre en place des stratégies de communication digitale, maîtriser les outils de la suite Adobe (Illustrator, In Design, Photoshop) pour créer des visuels adpatés à la demande de mes clients, argumenter mes propos et être à leur écoute pour bien comprendre les messages qu’ils souhaitent faire passer sur leur site Web, vitrine de leur activité ; site Web que je construis sur Wordpress en utilisant les langages de programmation tels que HTML 5 CSS3, voilà mon projet.</h3>
-              <h3>J’ai toutes les compétences désormais pour être une architecte du Web : une webdesigneuse promise àun nouvel avenir professionnel.</h3>
-              <h3>L’esthétique utile et juste : trois mots clés de ma future activité professionnelle.</h3>
-              <h3>«L’essence d’un projet, c’est l’harmonie parfaite entre l’esthétique, l’utile et le juste.» (Franck Lloyd Wright Architecte & designer d’intérieur des Etats Unis d’Amérique 1867-1959)</h3>
-            </div>
-            <!--nouvelles compétences en cours-->
-            <div class="block" id="newSkills">
-              <h2>De nouvelles compétences à venir</h2>
-              <h2>#WebDesigner</h2>
-              <h3>A l'issue de ma formation, je serai capable de prendre en charge la conception générale d'un site web, de gérer la clarté de la navigation et l’optimisation des parcours.</h3>
-              <h3>Mes contenus seront de qualité et j'organiserai les éléments graphiques et textuels sur la base de normes techniques que je maîtriserai.</h3>
-              <h3>Il m'incombera de dresser un cahier des charges en fonction des attentes client sur le design avant toute réalisation en respectant les méthodes agiles ; démarche indispensable à la réussite du projet client.</h3>
-              <h3>Mes créations déclencheront une émotion chez l'utilisateur grâce aux choix des designs tendances, des couleurs, des typographies...
-                <h3>Je mettrai à rude épreuve mon imagination débordante et je pousserai ma créativité au delà de ses limites.</h3>
-                <h3>Je maîtriserai les outils Adobe : After Effect Photoshop Illustrator InDesign... ;  la base de données : MySQL Javascript, PHP ; le CMS Wordpress ; les langages de programmation : HTML5 CSS3 ; l'UI Frameworks : Bootstrap.</h3>
-                <h3>Une fois mon Titre Professionnel en poche, j'irai frapper à votre porte, vous professionnels des agences web, des agences de communication ou des agences de design pour vous proposer de travailler en étroite collaboration pour la mise en place du design d'un produit web.</h3>
-              </div>
-              <!--Contact-->
-              <div class="block" id="contact">
-                <h2>Contact</h2>
-                <h3>7 Chemin du Stade - 80440 BOVES</h3>
-                <h3>P 06 74 87 56 07</h3>
-                <h3>guyard_murielle@orange.fr</h3>
-                <a href="https://www.linkedin.com/in/murielle-douay-27100798/">Cliquez ici pour afficher ma page LinKedin</a>
-              </div>
-            </body>
-            </html>
+      <p>1993 1994 / ISAM SUP DE CO AMIENS : Licence en Marketing et Communication</p>
+      <p>1991 1993 / SAINT REMY SOISSONS : BTS Action Commerciale</p>
+      <p>1990 1991 / SAINT REMY SOISSONS : BTS Secrétariat de Direction</p>
+      <p>1989 1990 / LYCEE PAUL CLAUDER LAON : Bac littéraire</p>
+    </div>
+    <div class="block" id="profExperiences">
+      <!--mes expériences professionnelles-->
+      <h2>Mes expériences professionnelles</h2>
+      <div class="text"><p>2017 à ce jour / Chargée de développement chez EXPERT RH Amiens</p></div>
+      <p>Prospecter une zone géographique et recenser les besoins en formation et solutions RH des prospects/clients ; Faire évoluer mon portefeuille d'affaires et entretenir un réseau d'affaires, faire le reporting et le suivi des entretiens ; Poster des annonces LinKedin pour promouvoir l'image de l'entreprise et de ses services.</p>
+      <div class="text"><p>2009 à 2017 / Conseillère en assurances de biens, de personnes, en banque et crédit chez AXA CABINET HERBET MOREAU Amiens</p></div>
+      <p>Commerciale sédentaire ; Découverte du client et de ses besoins ; Conseiller, négocier et conclure la vente ; Rédiger les contrats d'assurances ; Réaliser le suivi du portefeuille clients ; Assurer les actions marketing (mailing, phoning).</p>
+      <div class="text"><p>2002 à 2009 /Assistante d'agence en recrutement chez MANPOWER</p></div>
+      <p>Recrutements, tests de présélection, participation aux forums de recherche d'emplois, rencontres avec les partenaires ; Gestion des paies, contrats, factures, litiges, accidents du travail ; Actions marketing et commerciales, conseil et assistance juridique pour les clients.</p>
+      <div class="text"><p>1994 à 2002 /Assistante commerciale chez ESTODDI et divers CDD, tels que Assistante de direction chez PROLITERIE Saint Maximin 60 ; Assistante de direction à STE DE NEGOCE DE GRAINS à Quessy 02 ; MEDEF PICARDIE - FRANCE TELECOM Amiens - AUCHAN LOGISTIQUES Amiens - TECHNIMAGES Anizy-le-Château 02</p>
+      </div></div>
+      <!--mon nouveau projet professionnel-->
+      <div class="block" id="newProject">
+        <h2>Mon nouveau projet professionnel</h2>
+        <p>La com’, c’est juste pas grand chose...C’est juste du travail.</p>
+        <p>... C’est ce que j’ai souhaité découvrir en me formant au métier de Web Designer à La Manu, Campus d’Amiens.</p>
+        <p>La relation client a toujours été au coeur de mon métier.</p>
+        <p>Aujourd’hui, mes comptences sont reconnues auprès de mes clients. Il est temps pour moi de revenir à mes premières amours : la communication et en particulier la communication digitale, me permettant d’accéder à un métier en plein essor.</p>
+        <p>Mettre en place des stratégies de communication digitale, maîtriser les outils de la suite Adobe (Illustrator, In Design, Photoshop) pour créer des visuels adpatés à la demande de mes clients, argumenter mes propos et être à leur écoute pour bien comprendre les messages qu’ils souhaitent faire passer sur leur site Web, vitrine de leur activité ; site Web que je construis sur Wordpress en utilisant les langages de programmation tels que HTML5 & CSS3, voilà mon projet.</p>
+        <p>J’ai toutes les compétences désormais pour être une architecte du Web : une webdesigneuse promise à un nouvel avenir professionnel.</p>
+        <p>L’esthétique utile et juste : trois mots clés de ma future activité professionnelle.</p>
+        <p>«L’essence d’un projet, c’est l’harmonie parfaite entre l’esthétique, l’utile et le juste.» (Franck Lloyd Wright Architecte & designer d’intérieur des Etats Unis d’Amérique 1867-1959)</p>
+      </div>
+      <!--nouvelles compétences en cours-->
+      <div class="block" id="newSkills">
+        <h2>De nouvelles compétences à venir #WebDesigner</h2>
+        <p>A l'issue de ma formation, je serai capable de prendre en charge la conception générale d'un site web, de gérer la clarté de la navigation et l’optimisation des parcours.</p>
+        <p>Mes contenus seront de qualité et j'organiserai les éléments graphiques et textuels sur la base de normes techniques que je maîtriserai.</p>
+        <p>Il m'incombera de dresser un cahier des charges en fonction des attentes client sur le design avant toute réalisation en respectant les méthodes agiles ; démarche indispensable à la réussite du projet client.</p>
+        <p>Mes créations déclencheront une émotion chez l'utilisateur grâce aux choix des designs tendances, des couleurs, des typographies.</p>
+        <p>Je mettrai en exergue mon imagination débordante et je nourrirai ma créativité au travers d'une démarche culturelle.</p>
+        <p>Je maîtriserai les outils Adobe : After Effect Photoshop Illustrator InDesign ;  la base de données : MySQL Javascript, PHP ; le CMS Wordpress ; les langages de programmation : HTML5, CSS3 ; l'UI Frameworks : Bootstrap.</p>
+        <p>Une fois mon Titre Professionnel obtenu, j'irai frapper à votre porte, vous, professionnels des agences web, des agences de communication ou des agences de design pour vous proposer de travailler en étroite collaboration pour la mise en place du design d'un produit web.</p>
+      </div>
+      <!--Contact-->
+      <div class="block" id="contact">
+        <h3>Contact</h3>
+        <p>7 Chemin du Stade - 80440 BOVES</p>
+        <p>P 06 74 87 56 07</p>
+        <p>guyard_murielle@orange.fr</p>
+        <p><a href="https://www.linkedin.com/in/murielle-douay-27100798/">Cliquez ici pour afficher ma page LinKedin</a><p>
+        </div>
+      </body>
+      </html>
